<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/buttonC346"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c346_android_programming" />

    <Button
        android:id="@+id/buttonC218"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c218_ui_ux_design_for_apps" />

    <Button
        android:id="@+id/buttonC235"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c235_it_security_and_management" />
</LinearLayout>